<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:weightSum=".9"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/longer_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/helplinelogo" />

        <TextView
            android:id="@+id/secondpage_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/secondpage_top"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bullets"
            app:layout_constraintEnd_toEndOf="@+id/bullets"
            app:layout_constraintStart_toStartOf="@+id/bullets"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="@string/secondpage_top" />

        <TextView
            android:id="@+id/bullets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:paddingEnd="10dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/bullets"
            android:textColor="#000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/call_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/phone_smaller"
            android:padding="20dp"
            android:text="@string/call"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textAlignment="center"
            android:textColor="#000"
            tools:text="@string/hours" />

        <TextView
            android:id="@+id/msg_and_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgdatarates"
            android:textAlignment="center"
            android:textColor="#000"
            tools:text="@string/msgdatarates" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/change_state"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="true"
                android:layout_centerVertical="false"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/change_state"
                android:textColor="#fff"
                android:textSize="12sp"
                tools:text="@string/change_state" />

            <Button
                android:id="@+id/i_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="false"
                android:layout_margin="20dp"
                android:background="@drawable/circle_button"
                android:text="i"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:text="i" />
        </RelativeLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAlignment="center"
            tools:text="@string/copyright" />

    </LinearLayout>

    <ImageView
        android:id="@+id/red_bar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        app:srcCompat="@drawable/red_square" />

</RelativeLayout>